Sat Jul 16 11:11:09 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.5

	* debian/control (Section): s/libs/python/ in sections.

Wed Jul 13 14:21:11 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.4

	* pokerengine/pokergame.py (PokerGame.sitOut): do not set the dealer
	  seat if less than two players sit.

	* pokerengine/pokergame.py (PokerGame.sit): set first_turn to True if
	  less than two players. 

Tue Jul 05 21:10:21 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.3
	
	* tests/sit.py: sitin/sitout tests

	* pokerengine/pokergame.py (PokerGame.sitPlayersWaitingForFirstRound): 
	  if a player sits while others are paying the blinds, he must not
	  be included in the player list.

Tue Jun 28 13:25:19 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokergame.py (PokerGame.isGameEndInformationValid): can the
	  showdown of the previous game be displayed

Fri Jun 24 15:37:39 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.2
	
	* pokerengine/pokergame.py (PokerGame.callNraise): split
	  self.bet call to avoid autoplayer infinite recursion

Fri Jun 24 11:07:28 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokergame.py (PokerGame.sitOutNextTurn): sit_request and
	  for client usage, allow client to update sit_out_next_hand in advance.

Wed Jun 15 21:26:12 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.1

Thu May 05 14:29:47 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokertournament.py: tournament logic imported
	  from former tournament client

	* tests/tournament.py: new tournament logic non regression tests
	
	* tests/blinds.py: new blind logic non regression tests

Wed May 04 14:55:42 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokergame.py (PokerGame.payBuyIn): do not set the
	  buy in flag if the amount is less than the minimum. This check
	  should also be done by the application and is added as a
	  safeguard.

	* pokerengine/pokergame.py (PokerGame.sitOut): reset dealer sit
	  if only one player in game.
