@@ -1,12 +1,12 @@
 Source: poker-engine
-Section: libs
+Section: python
 Priority: optional
 Maintainer: Loic Dachary (OuoU) <loic@debian.org>
 Build-Depends-Indep: debhelper (>= 4.0.0), python2.3, python, python2.3-pypoker-eval (>= 127.0), automake1.7 | automake1.9
 Standards-Version: 3.6.2.1
 
 Package: python2.3-poker-engine
-Section: libs
+Section: python
 Architecture: all
 Depends: python2.3-pypoker-eval (>= 127.0)
 Description: multiplayer poker engine with abstract variants specifications
